# ChatDiD

./: .gitignore  README.md  install_r_packages.R  pyproject.toml  requirements.txt  run_server.py
data/examples/: CPS.csv  PENN.csv  README.md  card_krueger.dta  card_krueger_1994.csv  card_krueger_1994_long.csv  demo_card_krueger.csv  demo_card_krueger_fixed.csv  demo_simple_did.csv  demo_staggered_did.csv  mpdta_corrected.csv  mpdta_modified.csv  simple_2x2_did.csv  staggered_adoption.csv
src/chatdid_mcp/: __init__.py  did_analyzer.py  models.py  r_estimators.py  server.py  storage_manager.py  visualization.py  workflow.py
src/chatdid_mcp/tools/: __init__.py  data_tools.py  diagnostic_tools.py  estimation_tools.py  sensitivity_tools.py
